# ut-app

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  clickable.yaml  contenthub.json  imagecache.h  main.cpp  manifest.json.in  openapi.yaml  serchat.desktop.in  snapcraft.yaml
assets/: generate-lucide-qrc.py
plugins/: CMakeLists.txt
plugins/SerchatAPI/: CMakeLists.txt  apibase.cpp  apibase.h  channelcache.cpp  channelcache.h  emojicache.cpp  emojicache.h  markdownparser.cpp  markdownparser.h  messagecache.cpp  messagecache.h  plugin.cpp  plugin.h  qmldir  serchatapi.cpp  serchatapi.h  servermembercache.cpp  servermembercache.h  userprofilecache.cpp  userprofilecache.h
plugins/SerchatAPI/api/: apiclient.cpp  apiclient.h  cache.cpp  messages.cpp  profile.cpp  servers.cpp
plugins/SerchatAPI/auth/: authclient.cpp  authclient.h
plugins/SerchatAPI/models/: README.md  channellistmodel.cpp  channellistmodel.h  genericlistmodel.cpp  genericlistmodel.h  messagemodel.cpp  messagemodel.h
plugins/SerchatAPI/network/: networkclient.cpp  networkclient.h  socketclient.cpp  socketclient.h
po/: serchat.alexanderrichards.pot
qml/: ApiSettingsPage.qml  CreateServerPage.qml  DebugPage.qml  EditProfilePage.qml  HomePage.qml  JoinServerPage.qml  LoginPage.qml  Main.qml  ProfilePage.qml  ServerSettingsPage.qml  SettingsPage.qml  qml.qrc
qml/components/: Avatar.qml  BadgeLike.qml  BottomSheet.qml  CategoryHeader.qml  ChangeEmailDialog.qml  ChangePasswordDialog.qml  ChangeUsernameDialog.qml  ChannelItem.qml  ChannelListView.qml  ColorUtils.qml  ConversationListItem.qml  CreateDMDialog.qml  DMListView.qml  EmojiData.qml  EmojiPicker.qml  EmptyState.qml  FilePreview.qml  IconButton.qml  ListHeader.qml  LoadingOverlay.qml  LucideIcon.qml  MarkdownText.qml  MediaViewer.qml  MemberListItem.qml  MembersListView.qml  MessageActionSheet.qml  MessageBubble.qml  MessageComposer.qml  MessageView.qml  ReactionPickerSheet.qml  SearchBox.qml  SearchOverlay.qml  SectionHeader.qml  ServerIcon.qml  ServerListView.qml  UserPanel.qml  UserProfileSheet.qml  qmldir
